@@ -1,0 +1,26 @@
+<?xml version="1.0"?>
+<erss>
+	<header>Isotopp</header>
+
+	<!-- a serendipity (S9Y) blog, RSS 0.91, in German -->
+	<hostname>blog.koehntopp.de</hostname>
+	<url>http://blog.koehntopp.de/rss.php?version=0.91</url>
+
+	<item_root>channel</item_root>
+	<item_description>description</item_description>
+	<item_start>item</item_start>
+	<item_title>title</item_title>
+	<item_url>link</item_url>
+
+	<update_rate>6000</update_rate>
+
+	<clock>0</clock>
+
+	<stories>7</stories>
+
+	<borderless>1</borderless>
+
+	<x>1</x>
+	<y>998</y>
+
+</erss>
