@@ -2,7 +2,8 @@ void erss_window_resize (Ecore_Evas *);
 
 int  erss_set_time (void *);
 
-int  erss_gui_add_items(Erss_Feed *);
+int  erss_gui_items_add(Erss_Feed *);
+int  erss_gui_items_drop(Ewd_List **);
 
-int  erss_gui_init (char *);
+int  erss_gui_init (char *, Erss_Config *);
 int  erss_gui_exit (void);
